--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@ code {
 }
 
 #root {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
 }
@@ -22,10 +26,9 @@ code {
 main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  justify-content: flex-start;
+  min-height: 400px;
 }
 
 ol {
